feat(operations): update operations page with new content and images
- Add podcast buttons with microphone icons for Energy Markets and Environmental policy
- Update video links: SnoCat (_ZYVHW_g-JE) and Canyon of Ancients (5-U3mYViitA)
- Remove transmission maintenance button and play button from managing energy
- Update all resource links (OASIS, ERP, Financials, Dark Fiber)
- Add processed images at 800x600 and 1200x500 with server paths
- Fix ERP link in making electricity section

--- a/operations.htm
+++ b/operations.htm
@@ -51,8 +51,8 @@
 			<div class="l-constrain--no-padding">
 				<!-- Hero -->
 				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
-					<img src="https://placehold.co/1200x600?text=Lineman+at+work" alt="Lineman at work"
-						class="absolute inset-0 w-full h-full object-cover z-0" />
+					<img src="https://tristate.coop/sites/default/files/images/operations-hero-1200x500.jpg"
+						alt="Lineman at work" class="absolute inset-0 w-full h-full object-cover z-0" />
 					<div
 						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
@@ -80,8 +80,8 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/600x400?text=Solar+panels" alt="Solar panels"
-								class="absolute inset-0 w-full h-full object-cover" />
+							<img src="https://tristate.coop/sites/default/files/images/san-isabel-solar-800x600.jpg"
+								alt="Solar panels" class="absolute inset-0 w-full h-full object-cover" />
 						</div>
 					</div>
 					<div class="sm:order-first h-full">
@@ -95,7 +95,7 @@
 									low-cost, emissions-free renewable energy, and a reliable fleet of coal and natural
 									gas
 									power plants. We have 20+ generation facilities in our portfolio with <a
-										href="#">more on the
+										href="https://tristate.coop/erp">more on the
 										way</a>.
 									Members also have the option to self-supply a portion of their power needs so they
 									can
@@ -116,11 +116,11 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/700x600?text=Snocat" alt="Snocat video thumbnail"
-								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
+							<img src="https://tristate.coop/sites/default/files/images/sno-cat-800x600.jpg"
+								alt="Snocat video thumbnail" class="absolute size-full object-cover" />
+							<a href="https://www.youtube.com/embed/_ZYVHW_g-JE" data-featherlight="iframe"
+								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+								data-featherlight-iframe-width="500" class="relative">
 								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 									alt="Play button" class="size-24 sm:size-44" />
 							</a>
@@ -139,12 +139,6 @@
 									businesses. Our Transmission Department is made up of
 									substation technicians, telecommunications and lineworkers who
 									work tirelessly to maintain our system.
-								</p>
-								<p>
-									<a href="#"
-										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-gray">
-										Transmission maintenance
-									</a>
 								</p>
 							</div>
 						</div>
@@ -204,14 +198,8 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/700x600?text=Operations+Center" alt="Snocat video thumbnail"
-								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
-								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
-									alt="Play button" class="size-24 sm:size-44" />
-							</a>
+							<img src="https://tristate.coop/sites/default/files/images/energy-markets-2-800x600.jpg"
+								alt="Operations Center" class="absolute size-full object-cover" />
 						</div>
 					</div>
 					<div class="h-full">
@@ -232,9 +220,10 @@
 									makes sure that power is cost-effective.
 								</p>
 								<p>
-									<a href="#"
-										class="inline-block rounded-full border px-4 py-2 font-normal no-underline">
-										Energy markets
+									<a href="https://tristate.coop/podcast-western-watts-energy-Alchemist"
+										class="inline-flex items-center gap-2 rounded-full border border-black border-solid pl-4 pr-6 py-2 font-normal text-black no-underline transition-transform">
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full.svg"
+											alt="audio icon" class="h-6" />Energy Markets podcast
 									</a>
 								</p>
 							</div>
@@ -246,11 +235,11 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/800x600?text=Park+Sign" alt="Park Sign video thumbnail"
-								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
+							<img src="https://tristate.coop/sites/default/files/images/cota-cortez-sign-800x600.jpg"
+								alt="Park Sign" class="absolute size-full object-cover" />
+							<a href="https://www.youtube.com/embed/5-U3mYViitA" data-featherlight="iframe"
+								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+								data-featherlight-iframe-width="500" class="relative">
 								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 									alt="Play button" class="size-24 sm:size-44" />
 							</a>
@@ -271,9 +260,10 @@
 									and fulfill ambitious plans to reduce greenhouse gas emissions.
 								</p>
 								<p>
-									<a href="#"
-										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-gray">
-										Environmental stewardship
+									<a href="https://tristate.coop/podcast-western-snapping-into-compliance"
+										class="inline-flex items-center gap-2 rounded-full border border-white border-solid pl-4 pr-6 py-2 font-normal text-white no-underline transition-transform">
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full-white.svg"
+											alt="audio icon" class="h-6" />Environmental policy podcast
 									</a>
 								</p>
 							</div>
@@ -287,11 +277,12 @@
 						<h2 class="font-serif font-light text-3xl">
 							Operations resources </h2> <!-- Button row -->
 						<div class="flex flex-wrap justify-center gap-4 pt-8">
-							<a href="#"
-								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
+							<a href="https://www.oasis.oati.com/tsgt/index.html"
+								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black"
+								target="_blank">
 								OASIS
 							</a>
-							<a href="#"
+							<a href="https://tristate.coop/erp"
 								class="inline-block rounded-full border border-black px-6 py-2 font-normal no-underline text-black">
 								Electric Resource Plan
 							</a>
