feat(home): update navigation and content
- Fix 6 broken navigation links (about-us, ERP, energy-mix, vegetation-management, BYOR program, podcast)
- Add YouTube video embed for cooperative benefits section
- Update slider with Electrify and Save® Program link and caption
- Complete third slider slide with proper image, link, and caption for "building for the future"
- Replace placeholder video thumbnail with Lake City commissioner image

--- a/home.htm
+++ b/home.htm
@@ -79,7 +79,7 @@
 
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/about-us"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black">
 										Learn how we do it
 									</a>
@@ -129,11 +129,12 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="https://placehold.co/700x600?text=Man+in+hat" alt="Snocat video thumbnail"
+							<img src="https://tristate.coop/sites/default/files/images/cooperative-benefits/lake-city-video-thumb.jpg"
+								alt="Robert Hurd, Hinsdale County Commissioner in Lake City, CO"
 								class="absolute size-full object-cover" />
-							<a href="#" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
-								data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-								class="relative">
+							<a href="https://www.youtube.com/embed/FZEcDboit9g" data-featherlight="iframe"
+								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+								data-featherlight-iframe-width="500" class="relative">
 								<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 									alt="Play button" class="size-24 sm:size-44" />
 							</a>
@@ -182,7 +183,8 @@
 							<p class="text-sm">
 								Backed by 20 years of data, we've developed our own set of industry-leading reliability
 								metrics to make sure we can serve members' power into the future. Tornadoes, heat waves
-								or blizzards: <a href="#" class="underline hover:text-gray">we're planning for it
+								or blizzards: <a href="https://tristate.coop/erp"
+									class="underline hover:text-gray">we're planning for it
 									all</a>.
 							</p>
 						</div>
@@ -194,10 +196,12 @@
 							</div>
 							<h3 class="text-xl font-bold">Affordable</h3>
 							<p class="text-sm">
-								As a not-for-profit, we work hard to keep rates affordable by <a href="#"
-									class="underline hover:text-gray">investing in low-cost renewable power</a>,
+								As a not-for-profit, we work hard to keep rates affordable by <a
+									href="https://tristate.coop/energy-mix" class="underline hover:text-gray">investing
+									in low-cost renewable power</a>,
 								participating in regional power markets to buy and sell power at the best rates, and <a
-									href="#" class="underline hover:text-gray">as we build for the future</a>.
+									href="https://tristate.coop/energy-mix" class="underline hover:text-gray">as we
+									build for the future</a>.
 							</p>
 						</div>
 
@@ -208,9 +212,11 @@
 							</div>
 							<h3 class="text-xl font-bold">Responsible</h3>
 							<p class="text-sm">
-								We are stewards of nearly 200,000 square miles, and <a href="#"
+								We are stewards of nearly 200,000 square miles, and <a
+									href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
 									class="underline hover:text-gray">we take that seriously</a>. We strive to meet
-								standards set by both the government and our members to <a href="#"
+								standards set by both the government and our members to <a
+									href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
 									class="underline hover:text-gray">protect ecosystems and communities</a>.
 							</p>
 						</div>
@@ -223,7 +229,8 @@
 							<h3 class="text-xl font-bold">Flexible</h3>
 							<p class="text-sm">
 								Tri-State is democratically governed and that's reflected in our bylaws. Members have
-								the ability to self-supply a portion of their power by <a href="#"
+								the ability to self-supply a portion of their power by <a
+									href="https://tristate.coop/tri-states-innovative-bring-your-own-resource-program-accepted-federal-regulators"
 									class="underline hover:text-gray">developing electric resources</a>.
 							</p>
 						</div>
@@ -253,7 +260,7 @@
 									mountain communities across our service territory.
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/podcast-western-watts"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline sm:border-white">
 										<span class="text-black hover:text-black sm:hideme">Podcast episodes and
 											more</span>
@@ -280,15 +287,16 @@
 							<!-- Additional required wrapper -->
 							<div class="swiper-wrapper"><!-- Slides -->
 								<div class="swiper-slide aspect-video sm:w-2/3">
-
-									<figure class="relative w-full h-full">
-										<img src="https://placehold.co/600x400/37637c/FFF?text=Building"
-											alt="Line repair work" class="absolute h-full w-full object-cover">
-										<figcaption
-											class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-											Tri-State headquarters in Westminster, CO
-										</figcaption>
-									</figure>
+									<a href="https://tristate.coop/electrify-and-save">
+										<figure class="relative w-full h-full">
+											<img src="https://placehold.co/600x400/37637c/FFF?text=Building"
+												alt="Line repair work" class="absolute h-full w-full object-cover">
+											<figcaption
+												class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
+												Learn about our Electrify and Save® Program
+											</figcaption>
+										</figure>
+									</a>
 								</div>
 
 								<div class="swiper-slide h-full sm:w-2/3 ">
@@ -321,14 +329,17 @@
 								</div>
 
 								<div class="swiper-slide aspect-video sm:w-2/3">
-									<figure class="relative w-full h-full">
-										<img src="https://placehold.co/600x400/37637c/FFF?text=Slide+Photo"
-											alt="Line repair work" class="absolute h-full w-full object-cover">
-										<figcaption
-											class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
-											We’re building for the...(need the rest)
-										</figcaption>
-									</figure>
+									<a href="https://tristate.coop/powering-the-future">
+										<figure class="relative w-full h-full">
+											<img src="https://tristate.coop/sites/default/files/images/cooperative-benefits/trucks-on-dirt-road-near-transmission-lines.png"
+												alt="Trucks on dirt road near transmission lines"
+												class="absolute h-full w-full object-cover">
+											<figcaption
+												class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
+												We're building for the future
+											</figcaption>
+										</figure>
+									</a>
 								</div>
 							</div>
 							<!-- If we need pagination -->
