feat(leadership): add microphone icon and fix broken link
- Add microphone icon to podcast button with proper styling
- Fix "Flexibility at Tri-State" link to point to BYOR program page
- Confirm annual report link and Jeff Wadsworth quote already implemented

--- a/leadership.htm
+++ b/leadership.htm
@@ -452,8 +452,9 @@
 								</p>
 								<p>
 									<a href="https://tristate.coop/podcast-western-watts-Tri-State-2025-Annual-Meeting"
-										class="inline-block rounded-full border border-white px-4 py-2 font-normal no-underline transition-transform text-white hover:text-gray">
-										Listen to the podcast
+										class="inline-flex items-center gap-2 rounded-full border border-white border-solid pl-4 pr-6 py-2 font-normal text-white no-underline transition-transform">
+										<img src="https://tristate.coop/sites/default/files/images/icons/microphone-solid-full-white.svg"
+											alt="audio icon" class="h-6" />Listen to the podcast
 									</a>
 								</p>
 							</div>
@@ -509,7 +510,7 @@
 									of grassroots spirit and forward-thinking insight.
 								</p>
 								<p>
-									<a href="#"
+									<a href="https://tristate.coop/tri-states-innovative-bring-your-own-resource-program-accepted-federal-regulators"
 										class="inline-block rounded-full border border-black text-black px-4 py-2 font-normal no-underline transition-transform hover:text-black">
 										Flexibility at Tri-State
 									</a>
