feat(leadership): add gradient background to leadership grid
- Add blue gradient background to [data-leadership] container
- Foundation step for mobile-first leadership animation system
- Clean starting point for incremental development

--- a/leadership.htm
+++ b/leadership.htm
@@ -105,16 +105,16 @@
 
 
 				<!-- Tri-State’s leadership team -->
-				<section class="min-h-96 px-8 py-16 text-center sm:min-h-[400px] lg:px-16 lg:py-24">
-					<h2 class="font-serif font-light text-3xl">
+				<section class="min-h-96 py-16 text-center sm:min-h-[400px] lg:px-16 lg:py-24">
+					<h2 class="px-8 font-serif font-light text-3xl">
 						Tri-State’s leadership team
 					</h2>
 
-					<div class="mt-20 relative grid gap-y-12 sm:p-1 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4"
-						data-leadership>
+					<div class="mt-20 relative grid grid-cols-2 md:grid-cols-4" data-leadership
+						style="background: linear-gradient(0deg, rgba(0, 52, 87, 1) 29%, rgba(0, 107, 168, 1) 100%);">
 						<div class="grid-cover" data-cover></div>
 
-						<div class="p-4 outline outline-solid outline-1 group" data-card="duane">
+						<div class="p-4 group bg-white" data-card="duane">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -147,7 +147,7 @@
 							</div>
 
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="elda">
+						<div class="p-4 group bg-white" data-card="elda">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/elda-de-la-pe%C3%B1a-400x500.jpg"
@@ -177,7 +177,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="bob">
+						<div class="p-4 group bg-white" data-card="bob">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/bob-frankmore-400x500.jpg"
@@ -210,7 +210,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="clifton">
+						<div class="p-4 group bg-white" data-card="clifton">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/clifton-karnei-400x500.jpg"
@@ -245,7 +245,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="chris">
+						<div class="p-4 group bg-white" data-card="chris">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/chris-pink-400x500.jpg"
@@ -284,7 +284,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="reg">
+						<div class="p-4 group bg-white" data-card="reg">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/reg-rudolph-400x500.jpg"
@@ -317,7 +317,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="jay">
+						<div class="p-4 group bg-white" data-card="jay">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/jay-sturhahn-400x500.jpg"
@@ -357,7 +357,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="p-4 outline outline-solid outline-1 group" data-card="lisa">
+						<div class="p-4 group bg-white" data-card="lisa">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/lisa-tiffin-v2-400x500.jpg"
