--- a/leadership.htm
+++ b/leadership.htm
@@ -112,7 +112,6 @@
 
 					<div class="mt-20 relative grid grid-cols-2 md:grid-cols-4" data-leadership
 						style="background: linear-gradient(0deg, rgba(0, 52, 87, 1) 29%, rgba(0, 107, 168, 1) 100%);">
-						<div class="grid-cover" data-cover></div>
 
 						<div class="p-4 group bg-white" data-card="duane">
 							<div class="flex flex-col h-full">
@@ -396,30 +395,27 @@
 
 					</div>
 					<template id="bio-template">
-						<!-- 
-							col-start-1
-							col-start-2 
-							col-start-3 
-							col-start-4 
-							row-start-1
-							row-start-2
-							row-start-3
-							row-start-4
-							-->
-						<div data-bio-container>
-							<div class="bg-white text-left p-4 -m-4 outline outline-1 rounded-lg">
-								<button
-									class="absolute -top-8 -right-8 rounded-full size-8 grid place-items-center cursor-pointer"
-									data-close aria-label="Close">
-									<svg width="20" height="20" viewBox="0 0 20 20" fill="none" aria-hidden="true"
-										class="pointer-events-none">
-										<line x1="4" y1="4" x2="16" y2="16" stroke="currentColor" stroke-width="2"
-											stroke-linecap="round" />
-										<line x1="16" y1="4" x2="4" y2="16" stroke="currentColor" stroke-width="2"
-											stroke-linecap="round" />
-									</svg>
-								</button>
-								<div data-bio-content></div>
+						<div class="relative space-y-6">
+							<button
+								class="fixed top-4 right-4 rounded-full size-8 grid place-items-center cursor-pointer"
+								data-close aria-label="Close">
+								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" aria-hidden="true"
+									class="pointer-events-none">
+									<line x1="4" y1="4" x2="16" y2="16" stroke="currentColor" stroke-width="2"
+										stroke-linecap="round" />
+									<line x1="16" y1="4" x2="4" y2="16" stroke="currentColor" stroke-width="2"
+										stroke-linecap="round" />
+								</svg>
+							</button>
+							<div class="sm:grid sm:grid-cols-2 sm:gap-8">
+								<div class="width-full aspect-square rounded-full px-auto max-w-sm">
+									<img data-photo alt="" class="size-full rounded-full object-cover object-top" />
+									<div>
+										<h3 class="text-xl font-bold" data-name></h3>
+										<p class="text-gray-600" data-title></p>
+									</div>
+								</div>
+								<div class="prose max-w-none" data-modal-bio></div>
 							</div>
 						</div>
 					</template>
