--- a/leadership.htm
+++ b/leadership.htm
@@ -394,10 +394,16 @@
 
 
 					</div>
+
+					<!-- Leadership bio dialog -->
+					<dialog id="leadership-modal" class="p-0 w-full h-full bg-white overflow-auto">
+						<!-- Content gets populated from template -->
+					</dialog>
+
 					<template id="bio-template">
-						<div class="relative space-y-6">
+						<div class="relative">
 							<button
-								class="fixed top-4 right-4 rounded-full size-8 grid place-items-center cursor-pointer"
+								class="fixed top-6 right-8 rounded-full size-8 grid place-items-center cursor-pointer"
 								data-close aria-label="Close">
 								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" aria-hidden="true"
 									class="pointer-events-none">
@@ -407,15 +413,15 @@
 										stroke-linecap="round" />
 								</svg>
 							</button>
-							<div class="sm:grid sm:grid-cols-2 sm:gap-8">
-								<div class="width-full aspect-square rounded-full px-auto max-w-sm">
-									<img data-photo alt="" class="size-full rounded-full object-cover object-top" />
+							<div class="h-full sm:grid sm:grid-cols-2 sm:gap-8">
+								<div class="width-full aspect-square px-auto max-w-sm">
+									<img data-photo alt="" class="size-full object-cover object-top" />
 									<div>
 										<h3 class="text-xl font-bold" data-name></h3>
 										<p class="text-gray-600" data-title></p>
 									</div>
 								</div>
-								<div class="prose max-w-none" data-modal-bio></div>
+								<div class="p-6 prose max-w-none text-left overflow-auto" data-modal-bio></div>
 							</div>
 						</div>
 					</template>
