--- a/leadership.htm
+++ b/leadership.htm
@@ -113,7 +113,7 @@
 					<div class="mt-20 relative grid grid-cols-2 md:grid-cols-4" data-leadership
 						style="background: linear-gradient(0deg, rgba(0, 52, 87, 1) 29%, rgba(0, 107, 168, 1) 100%);">
 
-						<div class="p-4 group bg-white" data-card="duane">
+						<div class="relative p-4 group bg-white" data-card="duane">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -136,17 +136,13 @@
 										U.S. Government.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 
 						</div>
-						<div class="p-4 group bg-white" data-card="elda">
+						<div class="relative p-4 group bg-white" data-card="elda">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/elda-de-la-pe%C3%B1a-400x500.jpg"
@@ -167,16 +163,12 @@
 										Resources.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="bob">
+						<div class="relative p-4 group bg-white" data-card="bob">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/bob-frankmore-400x500.jpg"
@@ -200,16 +192,12 @@
 										State University.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="clifton">
+						<div class="relative p-4 group bg-white" data-card="clifton">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/clifton-karnei-400x500.jpg"
@@ -235,16 +223,12 @@
 										Marketing, and the National Renewables Cooperative Organization (NRCO).
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="chris">
+						<div class="relative p-4 group bg-white" data-card="chris">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/chris-pink-400x500.jpg"
@@ -274,16 +258,12 @@
 										engineering from the Colorado School of Mines.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="reg">
+						<div class="relative p-4 group bg-white" data-card="reg">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/reg-rudolph-400x500.jpg"
@@ -307,16 +287,12 @@
 										University.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="jay">
+						<div class="relative p-4 group bg-white" data-card="jay">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/jay-sturhahn-400x500.jpg"
@@ -347,16 +323,12 @@
 										Foundation.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
-						<div class="p-4 group bg-white" data-card="lisa">
+						<div class="relative p-4 group bg-white" data-card="lisa">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/lisa-tiffin-v2-400x500.jpg"
@@ -381,13 +353,9 @@
 										and has a Bachelor of Science degree in political science.
 									</div>
 								</div>
-								<div class="mt-auto">
-									<button type="button"
-										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
-										data-expand>
-										View full profile
-									</button>
-								</div>
+								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
+									View full profile
+								</button>
 							</div>
 						</div>
 
