--- a/leadership.htm
+++ b/leadership.htm
@@ -370,14 +370,13 @@
 					</div>
 
 					<!-- Leadership bio dialog -->
-					<dialog id="leadership-modal" class="p-0 w-full h-full bg-white overflow-auto">
+					<dialog id="leadership-modal" class="p-0 w-full h-full bg-white overflow-auto backdrop:bg-black/50">
 						<!-- Content gets populated from template -->
 					</dialog>
 
 					<template id="bio-template">
-						<div class="relative">
-							<button
-								class="absolute top-6 right-8 rounded-full size-8 grid place-items-center cursor-pointer"
+						<div class="relative h-full">
+							<button class="top-6 right-8 rounded-full size-8 grid place-items-center cursor-pointer"
 								data-close aria-label="Close">
 								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" aria-hidden="true"
 									class="pointer-events-none">
@@ -387,9 +386,9 @@
 										stroke-linecap="round" />
 								</svg>
 							</button>
-							<div class="h-full sm:grid sm:grid-cols-2 sm:gap-8">
+							<div class="h-full sm:grid sm:grid-cols-2 sm:gap-8 sm:p-16 sm:text-white">
 								<div class="width-full aspect-square px-auto max-w-sm">
-									<img data-photo alt="" class="size-full object-cover object-top" />
+									<img data-photo alt="" class="size-full object-cover object-top sm:rounded-3xl" />
 									<div>
 										<h3 class="text-xl font-bold" data-name></h3>
 										<p class="text-gray-600" data-title></p>
