fix(leadership): remove reg

--- a/leadership.htm
+++ b/leadership.htm
@@ -264,35 +264,7 @@
 								</button>
 							</div>
 						</div>
-						<div class="relative p-4 group bg-white" data-card="reg">
-							<div class="flex flex-col h-full">
-								<div class="relative w-full aspect-square">
-									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/reg-rudolph-400x500.jpg"
-										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
-								</div>
-								<div class="text-xl font-bold mt-6">Reg Rudolph</div>
-								<div class="mb-6">Chief Energy Innovations Officer</div>
-								<div class="" data-bio>
-									<div class="">
-										Reg joined Tri-State in January 2022 and is responsible for developing and
-										implementing competitive energy services,
-										managing beneficial electrification programs and overseeing member relations.
-										Prior
-										to Tri-State, he served as General
-										Manager of San Isabel Electric Association, Inc. for 13 years and has more than
-										30 years of experience in the electric
-										cooperative utility industry. Reg has a Master of Business Administration degree
-										from Colorado State University and
-										bachelor’s degrees in business administration and economics from North Dakota
-										State
-										University.
-									</div>
-								</div>
-								<button type="button" class="absolute inset-0 cursor-pointer opacity-0" data-expand>
-									View full profile
-								</button>
-							</div>
-						</div>
+
 						<div class="relative p-4 group bg-white" data-card="jay">
 							<div class="flex flex-col h-full">
 								<div class="relative w-full aspect-square">
@@ -358,6 +330,9 @@
 									View full profile
 								</button>
 							</div>
+						</div>
+						<div class="relative p-4 group bg-white" data-card="spacer">
+
 						</div>
 
 
