content(members): new first paragraph

--- a/members.htm
+++ b/members.htm
@@ -46,18 +46,17 @@
 							What it means to be a member
 						</h2>
 						<p>
-							Tri-State is an association of our members—utilities and businesses spread across
-							Colorado,
-							Nebraska, New Mexico and
-							Wyoming. As a cooperative, we are member-owned, and our board of directors is is made up
-							of
-							these diverse not-forprofit
-							electric cooperatives and public power districts. Our board members are also ranchers,
-							farmers and business owners
-							that live near the utilities they represent. Together they leverage this expertise to
-							make
-							governing decisions for
-							Tri-State.
+							Tri-State is more than just an energy provider—we’re a community of member-owned utilities
+							and businesses working
+							together across Colorado, Nebraska, New Mexico, and Wyoming. As a cooperative, our strength
+							comes from our members, and
+							our board of directors reflects that diversity. These board members aren’t just
+							representatives—they’re ranchers,
+							farmers, and local business owners who live and work in the same communities served by our
+							utilities. Their firsthand
+							experience and deep local ties help guide the decisions that shape Tri-State’s future,
+							ensuring we stay true to our
+							mission and values.
 
 
 						</p>
