chore(operations): image placeholders

--- a/operations.htm
+++ b/operations.htm
@@ -151,8 +151,8 @@
 						<!-- Stat 1 -->
 						<div class="text-center space-y-4">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://placehold.co/200x200?text=Icon-Label" alt="Icon"
-									class="w-full h-full">
+								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">1,250 MW</p>
 							<p class="text-sm">We're adding 1,250 megawatts of renewables and battery storage between
@@ -162,8 +162,8 @@
 						<!-- Stat 2 -->
 						<div class="text-center space-y-4">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://placehold.co/200x200?text=Icon-Label" alt="Icon"
-									class="w-full h-full">
+								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">24/7/365</p>
 							<p class="text-sm">We staff two real-time power trading desks to buy, sell and monitor power
@@ -173,8 +173,8 @@
 						<!-- Stat 3 -->
 						<div class="text-center space-y-4">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://placehold.co/200x200?text=Icon-Label" alt="Icon"
-									class="w-full h-full">
+								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">50,000</p>
 							<p class="text-sm">We make annual improvements to 50,000 acres of Morgan Creek Ranch in
@@ -184,8 +184,8 @@
 						<!-- Stat 4 -->
 						<div class="text-center space-y-4">
 							<div class="mx-auto size-24 sm:size-36">
-								<img src="https://placehold.co/200x200?text=Icon-Label" alt="Icon"
-									class="w-full h-full">
+								<img src="https://tristate.coop/sites/default/files/images/fpo-stats-icon.png"
+									alt="Icon" class="w-full h-full">
 							</div>
 							<p class="font-semibold text-xl">200</p>
 							<p class="text-sm">Tri-State has 200 transmission maintenance employees dedicated to
