fix(leadership): full urls for images

--- a/leadership.htm
+++ b/leadership.htm
@@ -71,8 +71,8 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="assets/images/hub-thompson-800x-600.jpg" alt="Hub Thompson"
-								class="absolute inset-0 w-full h-full object-cover" />
+							<img src="https://tristate.coop/sites/default/files/images/hub-thompson-800x-600.jpg"
+								alt="Hub Thompson" class="absolute inset-0 w-full h-full object-cover" />
 						</div>
 					</div>
 					<div class="h-full">
@@ -362,8 +362,12 @@
 								</svg>
 							</button>
 							<div class="h-full sm:grid sm:grid-cols-2 sm:gap-8 sm:p-16 sm:text-white">
-								<div class="width-full aspect-square px-auto max-w-sm">
-									<img data-photo alt="" class="size-full object-cover object-top sm:rounded-3xl" />
+								<div>
+
+									<div class="width-full aspect-square px-auto max-w-sm">
+										<img data-photo alt=""
+											class="size-full object-cover object-top sm:rounded-3xl" />
+									</div>
 									<div>
 										<h3 class="text-xl font-bold" data-name></h3>
 										<p class="text-gray-600" data-title></p>
@@ -381,7 +385,7 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-[4/3] sm:aspect-auto sm:h-full">
-							<img src="assets/images/western-watts-host-and-guest-1.jpg"
+							<img src="https://tristate.coop/sites/default/files/images/western-watts-host-and-guest-1.jpg"
 								alt="Set of Western Watts podcast with host and guest"
 								class="absolute inset-0 w-full h-full object-cover" />
 						</div>
