fix(members): full image paths and alt text

--- a/members.htm
+++ b/members.htm
@@ -2178,8 +2178,9 @@
 				<!-- Chairman -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="relative aspect-[5/4] sm:aspect-auto">
-						<img src="assets/images/tim-rabon-stump-wall-800x600.jpg" alt="close-up of wind turbine"
-							class="absolute inset-0 w-full h-full object-cover" data-att-replace="Tim Rabon" />
+						<img src="https://tristate.coop/sites/default/files/images/tim-rabon-stump-wall-800x600.jpg"
+							alt="Tri-State Board Chairman Tim Rabon" class="absolute inset-0 w-full h-full object-cover"
+							data-att-replace="Tim Rabon" />
 					</div>
 					<div class="px-8 py-12 sm:text-left text-center flex items-center sm:min-h-[400px] sm:order-first">
 						<div class="space-y-4 max-w-md mx-auto">
@@ -2239,11 +2240,11 @@
 					</div>
 				</section>
 
-				<!-- "Bridging..." -->
+				<!-- "Member programs" -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-						<img src="assets/images/harvester-800x600.jpg" alt="Video thumbnail"
-							class="absolute size-full object-cover" data-att-replace="Harvester" />
+						<img src="https://tristate.coop/sites/default/files/images/harvester-800x600.jpg"
+							alt="Harvester" class="absolute size-full object-cover" data-att-replace="Harvester" />
 						<a href="https://www.youtube.com/embed/6Uxi7C_CKD0" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 							data-featherlight-iframe-width="500" class="relative">
