fix(about): full urls for images, typo fix

--- a/about-us.htm
+++ b/about-us.htm
@@ -83,8 +83,8 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="assets/images/man-in-tunnel-in-hard-hat-800x600.jpg" alt="Man in hard hat"
-								class="absolute inset-0 w-full h-full object-cover" />
+							<img src="https://tristate.coop/sites/default/files/images/man-in-tunnel-in-hard-hat-800x600.jpg"
+								alt="Man in hard hat" class="absolute inset-0 w-full h-full object-cover" />
 						</div>
 					</div>
 					<div class="sm:order-first h-full">
@@ -119,8 +119,8 @@
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="assets/images/family-welcomes-new-baby-800x600.jpg" alt="Snocat video thumbnail"
-								class="absolute size-full object-cover" />
+							<img src="https://tristate.coop/sites/default/files/images/family-welcomes-new-baby-800x600.jpg"
+								alt="Snocat video thumbnail" class="absolute size-full object-cover" />
 							<a href="https://www.youtube.com/embed/eK5_a57ABUc" data-featherlight="iframe"
 								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 								data-featherlight-iframe-width="500" class="relative">
@@ -242,7 +242,7 @@
 						<div class="space-y-2">
 							<p class="font-serif text-3xl font-light sm:text-4xl">$265,516</p>
 							<p>
-								conated to 78 charities and
+								donated to 78 charities and
 								organizations through Tri-State’s
 								match program in 2024.
 							</p>
