fix(about): wrong alt text

--- a/about-us.htm
+++ b/about-us.htm
@@ -120,7 +120,7 @@
 					<div class="h-full">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
 							<img src="https://tristate.coop/sites/default/files/images/family-welcomes-new-baby-800x600.jpg"
-								alt="Snocat video thumbnail" class="absolute size-full object-cover" />
+								alt="Family welcomes new baby" class="absolute size-full object-cover" />
 							<a href="https://www.youtube.com/embed/eK5_a57ABUc" data-featherlight="iframe"
 								data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 								data-featherlight-iframe-width="500" class="relative">
