feat(home): real icons

--- a/home.htm
+++ b/home.htm
@@ -176,8 +176,9 @@
 					<div class="grid gap-8 mt-16 max-w-7xl mx-auto sm:grid-cols-2 lg:grid-cols-4 lg:gap-28">
 						<!-- Reliable -->
 						<div class="space-y-4">
-							<div class="mx-auto w-20 h-20">
-								<img src="https://placehold.co/100x100?text=Icon" alt="Reliable icon" class="w-full">
+							<div class="py-2 mx-auto size-20">
+								<img src="https://tristate.coop/sites/default/files/images/icons/home-icon-reliable.svg"
+									alt="Reliable icon" class="-mr-3 h-full">
 							</div>
 							<h3 class="text-xl font-bold">Reliable</h3>
 							<p class="text-sm">
@@ -191,8 +192,9 @@
 
 						<!-- Affordable -->
 						<div class="space-y-4">
-							<div class="mx-auto w-20 h-20">
-								<img src="https://placehold.co/100x100?text=Icon" alt="Affordable icon" class="w-full">
+							<div class="px-2 mx-auto size-20">
+								<img src="https://tristate.coop/sites/default/files/images/icons/home-icon-affordable.svg"
+									alt="Affordable icon" class="h-full">
 							</div>
 							<h3 class="text-xl font-bold">Affordable</h3>
 							<p class="text-sm">
@@ -207,8 +209,9 @@
 
 						<!-- Responsible -->
 						<div class="space-y-4">
-							<div class="mx-auto w-20 h-20">
-								<img src="https://placehold.co/100x100?text=Icon" alt="Responsible icon" class="w-full">
+							<div class="mx-auto size-20">
+								<img src="https://tristate.coop/sites/default/files/images/icons/home-icon-responsible.svg"
+									alt="Responsible icon" class="h-full">
 							</div>
 							<h3 class="text-xl font-bold">Responsible</h3>
 							<p class="text-sm">
@@ -223,8 +226,9 @@
 
 						<!-- Flexible -->
 						<div class="space-y-4">
-							<div class="mx-auto w-20 h-20">
-								<img src="https://placehold.co/100x100?text=Icon" alt="Flexible icon" class="w-full">
+							<div class="mx-auto size-20">
+								<img src="https://tristate.coop/sites/default/files/images/icons/home-icon-flexible.svg"
+									alt="Flexible icon" class="h-full">
 							</div>
 							<h3 class="text-xl font-bold">Flexible</h3>
 							<p class="text-sm">
