feat(home): real map image

--- a/home.htm
+++ b/home.htm
@@ -51,11 +51,12 @@
 					</div>
 				</section>
 
-				<!-- Safety is our core value -->
+				<!-- Map -->
 				<section class="grid sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full">
 						<div class="relative aspect-video sm:aspect-auto sm:h-full">
-							<img src="assets/images/fpo-tristate-region.png" alt="Man in hard hat"
+							<img src="https://tristate.coop/sites/default/files/images/tristate-member-map-2025.jpg"
+								alt="Map of Tri-State's member area"
 								class="absolute inset-0 w-full h-full object-cover" />
 						</div>
 					</div>
