feat(home): western watts image

--- a/home.htm
+++ b/home.htm
@@ -240,11 +240,15 @@
 							</p>
 						</div>
 					</div>
-				</section> <!-- Western Watts Podcast -->
+				</section>
+
+				<!-- Western Watts Podcast -->
 				<section class="grid sm:relative sm:min-h-[400px] sm:grid-cols-2">
 					<div class="h-full sm:absolute sm:inset-0">
 						<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:h-full">
-							<img src="assets/images/pexels-ian-panelo-8726573.jpg" alt="Snocat video thumbnail"
+							<img src="https://tristate.coop/sites/default/files/images/western-watts-hard-hat-mobile.jpg"
+								srcset="https://tristate.coop/sites/default/files/images/western-watts-hard-hat-mobile.jpg 639w, https://tristate.coop/sites/default/files/images/western-watts-hard-hat-wide.jpg 640w"
+								sizes="(max-width: 639px) 100vw, 100vw" alt="Western Watts hard hat"
 								class="absolute size-full object-cover" />
 						</div>
 					</div>
