feat(home): slider, truck image

--- a/home.htm
+++ b/home.htm
@@ -298,8 +298,9 @@
 								<div class="swiper-slide aspect-video sm:w-2/3">
 									<a href="https://tristate.coop/electrify-and-save">
 										<figure class="relative w-full h-full">
-											<img src="https://placehold.co/600x400/37637c/FFF?text=Building"
-												alt="Line repair work" class="absolute h-full w-full object-cover">
+											<img src="https://tristate.coop/sites/default/files/images/tristate-beneficial-electrification-truck-800x450.jpg"
+												alt="Beneficial Electrification Truck"
+												class="absolute h-full w-full object-cover">
 											<figcaption
 												class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
 												Learn about our Electrify and Save® Program
